--- a/src/index.css
+++ b/src/index.css
@@ -61,6 +61,10 @@ h1 {
   width: 100%;
 }
 
+.noInput{
+  border-radius: 0.5em 0.5em 0.5em 0.5em!important;
+}
+
 .navNavi{
   width: 90%;
 }
@@ -78,3 +82,72 @@ h1 {
   border-radius: 0.5em 0.5em;
   width: 5em;
 }
+
+/**LOADING CSS*/
+
+.lds-ripple {
+  display: inline-block;
+  position: relative;
+  width: 120px;
+  height: 120px;
+}
+.lds-ripple div {
+  position: absolute;
+  border: 7px solid #76defb;
+  opacity: 1;
+  border-radius: 50%;
+  animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+}
+.lds-ripple div:nth-child(2) {
+  animation-delay: -0.5s;
+}
+@keyframes lds-ripple {
+  0% {
+    top: 36px;
+    left: 36px;
+    width: 0;
+    height: 0;
+    opacity: 1;
+  }
+  100% {
+    top: 0px;
+    left: 0px;
+    width: 72px;
+    height: 72px;
+    opacity: 0;
+  }
+}
+
+ /*END LOADING CSS*/
+
+
+ /**CSS Gallary */
+ .ulImg{
+   display: flex;
+   flex-flow: row wrap;
+   width: 100%;
+   justify-content: space-between;
+   -ms-align-items: flex-start;
+   align-items: flex-start;
+
+ }
+
+
+ .ulImg li{
+  padding: 5% 3%;
+  height: 20rem;
+  overflow: hidden;
+ }
+ .ulImg li img{
+  width: 100%;
+  height: 12rem;
+  transition: all .4s ease-in-out;
+ }
+ 
+ .card-body{
+   height: 5rem;
+ }
+
+.ulImg li img:hover { transform: scale(1.1); }
+ /**END Gallary*/
+
